deploy/01-calculatorgrpc-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculatorgrpc
  labels:
    istio-injection: enabled
