deploy/05-calculatorgrpc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calculatorgrpc
  name: calculatorgrpc
  namespace: calculatorgrpc
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculatorgrpc
  template:
    metadata:
      labels:
        app: calculatorgrpc
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"descriptor","configMap":{"name":"proto-descriptor","items":[{"key":"proto.pb","path":"proto.pb"}]}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"descriptor","mountPath":"/etc/envoy"}]'
    spec:
      containers:
      - image: ailtonmsj/calculatorgrpc
        name: calculatorgrpc
        imagePullPolicy: Always
