deploy/04-calculatorgrpc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: calculatorgrpc
  name: calculatorgrpc
  namespace: calculatorgrpc
spec:
  ports:
  - name: grpc
    port: 50081
    protocol: TCP
  selector:
    app: calculatorgrpc
  type: ClusterIP
